--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Desafio Pepsi | Landing Page</title>
+    <title>Pepsi Website</title>
 </head>
+
 <body>
-   <script src="js/scripts.js"></script>
+
+    <section>
+        <!-- MENU SUPERIOR -->
+        <header>
+            <a href="#"><img src="../src/images/logo.png" class="logo"></a>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">What's New</a></li>
+                <li><a href="#">Newsletter</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </header>
+        <script src="js/scripts.js"></script>
 </body>
+
 </html>
