Adicionando conteudo principal

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,19 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </header>
+
+        <div class="content">
+            <div class="textBox">
+                <h2>That's What<br><span>I like</span></h2>
+                <p>Pepsi brings you the taste you love with a refreshing twist. Enjoy the perfect blend of flavor and
+                    fizz in
+                    every sip.</p>
+                <a href="#">View All Products</a>
+            </div>
+            <div class="imgBox">
+                <img src="../src/images/pepsi001.png" class="pepsi">
+            </div>
+        </div>
         <script src="js/scripts.js"></script>
 </body>
 
