Adicionando conteudo interativo

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </header>
-
+        <!-- CONTEUDO PRINCIPAL -->
         <div class="content">
             <div class="textBox">
                 <h2>That's What<br><span>I like</span></h2>
@@ -35,6 +35,13 @@
                 <img src="../src/images/pepsi001.png" class="pepsi">
             </div>
         </div>
+
+        <ul class="thumb">
+            <li><img src="../src/images/pepsi001.png"></li>
+            <li><img src="../src/images/pepsi002.png"></li>
+            <li><img src="../src/images/pepsi003.png"></li>
+        </ul>
+
         <script src="js/scripts.js"></script>
 </body>
 
