Adicionando links para redes sociais

--- a/src/index.html
+++ b/src/index.html
@@ -35,14 +35,20 @@
                 <img src="../src/images/pepsi001.png" class="pepsi">
             </div>
         </div>
-
+        <!-- CONTEUDO INTERATIVO -->
         <ul class="thumb">
             <li><img src="../src/images/pepsi001.png"></li>
             <li><img src="../src/images/pepsi002.png"></li>
             <li><img src="../src/images/pepsi003.png"></li>
         </ul>
-
-        <script src="js/scripts.js"></script>
+        <!-- LINKS REDES SOCIAIS -->
+        <ul class="sci">
+            <li><a href="#"><img src="../src/images/facebook.png"></a></li>
+            <li><a href="#"><img src="../src/images/twitter.png"></a></li>
+            <li><a href="#"><img src="../src/images/instagram.png"></a></li>
+        </ul>
+    </section>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
