Adicionando funcionalidades com JS

--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,12 @@
         </div>
         <!-- CONTEUDO INTERATIVO -->
         <ul class="thumb">
-            <li><img src="../src/images/pepsi001.png"></li>
-            <li><img src="../src/images/pepsi002.png"></li>
-            <li><img src="../src/images/pepsi003.png"></li>
+            <li><img src="../src/images/pepsi001.png"
+                    onclick="imgSlider('../src/images/pepsi001.png'); chanceBgColor('#0062BE')"></li>
+            <li><img src="../src/images/pepsi002.png"
+                    onclick="imgSlider('../src/images/pepsi002.png'); chanceBgColor('#E60C2C')"></li>
+            <li><img src="../src/images/pepsi003.png"
+                    onclick="imgSlider('../src/images/pepsi003.png'); chanceBgColor('#1E1E1E')"></li>
         </ul>
         <!-- LINKS REDES SOCIAIS -->
         <ul class="sci">
