--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,9 @@
     <section class="sec">
         <!-- MENU SUPERIOR -->
         <header>
-            <a href="#"><img src="../src/images/logo.png" class="logo"></a>
-            <ul>
+            <a href="#"><img src="images/logo.png" class="logo"></a>
+            <div class="toggleMenu" onclick="ToggleMenu();"></div>
+            <ul class ="navigation">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Products</a></li>
                 <li><a href="#">What's New</a></li>
@@ -32,7 +33,7 @@
                 <a href="#">View All Products</a>
             </div>
             <div class="imgBox">
-                <img src="../src/images/pepsi001.png" class="pepsi">
+                <img src="images/pepsi001.png" class="pepsi">
             </div>
         </div>
         <!-- CONTEUDO INTERATIVO -->
@@ -46,9 +47,9 @@
         </ul>
         <!-- LINKS REDES SOCIAIS -->
         <ul class="sci">
-            <li><a href="#"><img src="../src/images/facebook.png"></a></li>
-            <li><a href="#"><img src="../src/images/twitter.png"></a></li>
-            <li><a href="#"><img src="../src/images/instagram.png"></a></li>
+            <li><a href="#"><img src="images/facebook.png"></a></li>
+            <li><a href="#"><img src="images/twitter.png"></a></li>
+            <li><a href="#"><img src="images/instagram.png"></a></li>
         </ul>
     </section>
     <script src="js/scripts.js"></script>
