--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <!-- MENU SUPERIOR -->
         <header>
             <a href="#"><img src="images/logo.png" class="logo"></a>
-            <div class="toggleMenu" onclick="ToggleMenu();"></div>
+            <div class="toggleMenu" onclick="toggleMenu();"></div>
             <ul class ="navigation">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Products</a></li>
